<resources>
    <string name="app_name">Bicicletas</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="recordarme">Recordarme</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="falta_usuario_contraseña">Ingrese usuario y contraseña</string>
    <string name="login_incorrecto">Usuario o contraseña incorrectos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="usuarios_sin_validar">Usuarios sin validar</string>
    <string name="buscar">Buscar...</string>
    <string name="title_activity_agregar_parada">Agregar</string>
    <string name="title_activity_editar_parada">Editar</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="estado">Estado: </string>
    <string name="parada">Parada: </string>
    <string name="disponibles">Disponibles</string>
    <string name="ocupadas">Ocupadas</string>
    <string name="nombre">Nombre</string>
    <string name="numero">Número</string>
    <string name="nroParada">Nro. parada</string>
    <string name="id">Id</string>
    <string name="cedula">Cedula</string>
    <string name="bicicletas_sin_devolver">No devueltas a tiempo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cargando_administradores">Cargando administradores...</string>
    <string name="test">Test</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cant_bicis">Cant Bicis</string>
    <string name="cargando_mapa">Cargando mapa...</string>
    <string name="no_hay_bicicletas">No hay bicicletas</string>
    <string name="cargando_bicicletas">Cargando bicicletas...</string>
    <string name="cargando_incidencias">Cargando incidencias...</string>
    <string name="no_hay_incidencias">No hay incidencias</string>
    <string name="no_hay_paradas">No hay paradas</string>
    <string name="cargando_paradas">Cargando paradas...</string>
    <string name="cargando_usuarios">Cargando usuarios...</string>
    <string name="actualizar">Actualizar</string>
    <string name="no_hay_usuarios">No hay Usuarios</string>
    <string name="admin">Admin</string>
    <string name="noasignado">---</string>
    <string name="comentarios">Comentarios</string>
    <string name="comentar">Comentar...</string>
    <string name="habilitar_usuario">Habilitar Usuario</string>
    <string name="inhabilitar_usuario">Inhabilitar Usuario</string>
    <string name="toque_para_expandir">Toque para expandir</string>
    <string name="correo">Correo</string>
    <string name="saldo">Saldo</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="pasaporte">Pasaporte</string>
</resources>
