<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4f000000"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/fondo_blanco"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textSize="25sp"
            android:textColor="#000"
            android:text="@string/test"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000"
            android:layout_margin="15dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cargando_administradores"
                    android:textAlignment="center"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:indeterminate="true" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000"
            android:layout_margin="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_alert"
                android:text="@string/cancelar"
                android:textColor="#F00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnAceptar"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_alert"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                android:text="@string/aceptar"
                android:textColor="#0F0"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="25dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>