<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:context=".MenuAdmin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/seleccionarParada"
                android:background="#CCC">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_blanco"
                android:text="@string/seleccionar_parada_editar"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_margin="10sp"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nombreError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:errorEnabled="true">


            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/nombre"
                android:inputType="text"
                android:textAlignment="center"
                android:visibility="gone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cantBicisError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/cantBicis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:digits="1234567890"
                android:hint="@string/cant_bicis"
                android:inputType="phone"
                android:textAlignment="center"
                android:visibility="invisible" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/editarParada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/boton_iniciar_sesion"
            android:onClick="EditarParada"
            android:text="@string/title_activity_editar_parada"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/carga"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cargando_mapa"
            android:textAlignment="center"
            android:textSize="25sp" />

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

    </LinearLayout>

</FrameLayout>