<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_lista_usuario"
    app:cardBackgroundColor="#CCC"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#CCC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/fondo_blanco">

            <LinearLayout
                android:id="@+id/cabecera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/usuario_default" />

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:layout_marginLeft="4dp" />

                <ImageView
                    android:id="@+id/imgHabilitado"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_aceptar"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imgInhabilitado"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_inhabilitar"
                    tools:ignore="ContentDescription" />

                <ProgressBar
                    android:id="@+id/barraProgreso"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_margin="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/msjExpandir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_msj"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/toque_para_expandir"
                    android:textColor="#FFF"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnHabilitar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/habilitar_usuario"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/fondo_verde"/>

                <Button
                    android:id="@+id/btnInhabilitar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/inhabilitar_usuario"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/fondo_rojo"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>